appId: ${APP_ID}
---
- runFlow:
      file: subflows/import/import-database-from-settings.flow.yaml
      env:
          FIXTURE_ROW_ID_MATCH: '20.db'

- runFlow: subflows/navigation/navigate-to-transactions.flow.yaml

- tapOn:
      id: 'TransactionsPage.Tab.Recurring'
- extendedWaitUntil:
      visible:
          id: 'RecurringCalendar.Container'
      timeout: 5000

- runFlow:
      when:
          visible:
              id: 'RecurringCalendar.UpcomingHeader'
      commands:
          - assertVisible:
                id: 'RecurringCalendar.UpcomingHeader'
          - assertVisible:
                id: 'RecurringCalendar.Row.E2E_Recurring_Gym'

- tapOn:
      id: 'RecurringCalendar.Day.CurrentMonth.19'
- extendedWaitUntil:
      visible:
          id: 'RecurringCalendar.SelectedDayHeader.19'
      timeout: 5000
- assertVisible:
      id: 'RecurringCalendar.Row.E2E_Recurring_Rent'
- tapOn:
      id: 'RecurringCalendar.Day.CurrentMonth.19'
- extendedWaitUntil:
      visible:
          id: 'RecurringCalendar.Day.CurrentMonth.19'
      timeout: 5000
- runFlow:
      when:
          visible:
              id: 'RecurringCalendar.UpcomingHeader'
      commands:
          - assertVisible:
                id: 'RecurringCalendar.UpcomingHeader'
          - assertVisible:
                id: 'RecurringCalendar.Row.E2E_Recurring_Gym'

- tapOn:
      id: 'RecurringCalendar.Day.CurrentMonth.1'
- extendedWaitUntil:
      visible:
          id: 'RecurringCalendar.SelectedDayHeader.1'
      timeout: 5000
- assertVisible:
      id: 'RecurringCalendar.SelectedDayEmptyState'

- tapOn:
      id: 'RecurringCalendar.PreviousMonthButton'
- extendedWaitUntil:
      visible:
          id: 'RecurringCalendar.AllRecurringHeader'
      timeout: 5000
- assertVisible:
      id: 'RecurringCalendar.Row.E2E_Recurring_Rent'
- assertVisible:
      id: 'RecurringCalendar.Row.E2E_Recurring_Gym'
